--- a/src/styles/CreateTweet.module.css
+++ b/src/styles/CreateTweet.module.css
@@ -1,29 +1,36 @@
 .createTweet {
-	height: 160px;
+	/* height: 170px;
 	display: flex;
 	flex-direction: column;
 	gap: 0.75rem;
 	padding: 2rem;
-	margin-right: 6rem;
-	border-bottom: 1px solid #252525;
+	margin-right: 5rem;
+	border: 1px solid #252525; */
+	display: grid;
+	grid-template-columns: 50px 1fr;
+	grid-template-rows: auto 30px;
+	gap: 1rem;
+	padding: 1.5rem 1rem;
+	margin-right: 5rem;
+	border: 1px solid #252525;
+	padding: 2rem 2rem 1rem 1rem;
 }
 
 .section {
-	display: flex;
-	gap: 1rem;
-	align-items: center;
+	grid-column: 2 / -1;
 }
 
 .tweetContent {
+	padding: 1rem;
 	width: 100%;
-	height: 80px;
 	border: none;
 	outline: none;
-	padding: 0.75rem 1rem;
 	resize: none;
 	border-radius: 4px;
 	line-height: 1.2rem;
 	font-family: Helvetica;
+	background-color: inherit;
+	border-bottom: 1px solid #252525;
 }
 
 .tweetContent::placeholder {
@@ -32,6 +39,7 @@
 }
 
 .tweetBtn {
+	grid-column: 2 / -1;
 	width: 70px;
 	padding: 0.25rem 0.25rem;
 	border-radius: 4px;
