--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,13 +2,21 @@
 	min-height: 100vh;
 	width: 100vw;
 	display: grid;
-	grid-template-columns: 150px 1fr;
+	grid-template-columns: minmax(100px, 225px) 1fr;
 }
 
 .sidebar {
 	grid-column: 1 / 2;
 }
 
-.content {
+.contentWrapper {
 	grid-column: 2 / -1;
+	display: flex;
+	align-items: center;
+}
+
+.content {
+	height: 100vh;
+	width: 800px;
+	margin: auto;
 }
