--- a/src/styles/Tweet.module.css
+++ b/src/styles/Tweet.module.css
@@ -1,12 +1,10 @@
 .tweet {
-	position: relative;
 	display: grid;
 	grid-template-columns: 50px 1fr;
 	grid-auto-flow: row;
 	grid-auto-rows: min-content;
 	gap: 0.5rem;
 	padding: 2rem 2rem 1.25rem 1rem;
-	margin-right: 5rem;
 	border: 1px solid #252525;
 	font-family: Helvetica;
 	line-height: 1.25rem;
@@ -21,6 +19,7 @@
 	grid-column: 2 / -1;
 	letter-spacing: 0.05rem;
 	font-size: 1.5ch;
+	padding-left: 1rem;
 }
 
 .mainWrapper {
@@ -53,6 +52,7 @@
 	line-height: 1.2rem;
 	font-family: Helvetica;
 	background-color: inherit;
+	padding: 0.5rem 0 1rem 1rem;
 }
 
 .actionsWrapper {
@@ -62,6 +62,7 @@
 	grid-column: 2 / -1;
 	justify-content: space-between;
 	padding: 0 1rem;
+	position: relative;
 }
 
 .actions {
