--- a/src/styles/Tweet.module.css
+++ b/src/styles/Tweet.module.css
@@ -10,6 +10,8 @@
 	line-height: 1.25rem;
 	letter-spacing: 0.02rem;
 	max-width: 710px;
+	position: relative;
+	overflow: hidden;
 }
 
 .tweet:hover {
@@ -78,6 +80,7 @@
 	gap: 0.5rem;
 	color: #757575;
 	transition: all 0.35s ease-in-out;
+	z-index: 3;
 }
 
 .actions:hover {
@@ -115,4 +118,13 @@
 	border-radius: 36px;
 	height: 72px;
 	width: 72px;
+}
+
+.navigateOverlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
 }
