--- a/src/styles/CommentPage.module.css
+++ b/src/styles/CommentPage.module.css
@@ -60,3 +60,33 @@
 	height: 72px;
 	width: 72px;
 }
+
+.back {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	padding: 1rem;
+}
+
+.backBtn {
+	padding: 0.35rem 0.75rem;
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+	background-color: black;
+	border: none;
+	font-size: 1.2rem;
+	letter-spacing: 0.1rem;
+	transition: all 0.25s ease-in-out;
+}
+
+.backBtn:focus,
+.backBtn:active {
+	border: none;
+	outline: none;
+}
+
+.backBtn:hover {
+	cursor: pointer;
+	color: #1da1f2;
+}
