mint tweet nft, upload metadata to ipfs and pin with pinata

--- a/src/styles/CreateTweet.module.css
+++ b/src/styles/CreateTweet.module.css
@@ -43,6 +43,10 @@
 	background-color: #1da1f2;
 }
 
+.tweetBtn:hover {
+	cursor: pointer;
+}
+
 .profilePic {
 	border-radius: 36px;
 	height: 72px;
