--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -3,13 +3,15 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 3rem;
+	gap: 2.25rem;
 	padding: 2rem 2rem 2rem 4rem;
 	border-right: 1px solid #252525;
 }
 
 .sidebar > * {
 	transition: 0.35s all ease;
+	padding: 0.5rem;
+	border-radius: 32px;
 }
 
 .sidebar > *:hover:nth-child(1) {
@@ -18,6 +20,5 @@
 
 .sidebar > *:hover {
 	cursor: pointer;
-	transform: scale(1.2);
-	color: #ca8b16;
+	background-color: rgb(153, 153, 153, 0.2);
 }
