--- a/src/styles/Tweet.module.css
+++ b/src/styles/Tweet.module.css
@@ -136,3 +136,10 @@
 	height: 100%;
 	z-index: 1;
 }
+
+.loading {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 2rem;
+}
