--- a/src/styles/CreateComment.module.css
+++ b/src/styles/CreateComment.module.css
@@ -24,6 +24,7 @@
 	align-items: center;
 	justify-content: center;
 	z-index: 998;
+	pointer-events: none;
 }
 
 .comment {
@@ -44,7 +45,7 @@
 	width: 72px;
 }
 
-.tweetContent {
+.replyContent {
 	padding: 1rem 0 2rem 0;
 	width: 95%;
 	border: none;
@@ -58,7 +59,7 @@
 	margin-left: 2.25rem;
 }
 
-.tweetContent::placeholder {
+.replyContent::placeholder {
 	font-family: Helvetica;
 	letter-spacing: 0.1rem;
 }
