--- a/src/styles/Tweet.module.css
+++ b/src/styles/Tweet.module.css
@@ -12,6 +12,7 @@
 	max-width: 710px;
 	position: relative;
 	overflow: hidden;
+	z-index: 2;
 }
 
 .loading {
@@ -88,7 +89,6 @@
 	gap: 0.5rem;
 	color: #757575;
 	transition: all 0.35s ease-in-out;
-	z-index: 3;
 }
 
 .actions:hover {
@@ -135,6 +135,7 @@
 	width: 100%;
 	height: 100%;
 	z-index: 1;
+	pointer-events: none;
 }
 
 .loading {
