--- a/src/styles/Auction.module.css
+++ b/src/styles/Auction.module.css
@@ -57,7 +57,7 @@
 }
 
 .iframe {
-	width: 90%;
+	width: 75%;
 	height: auto;
 	border: none;
 }
@@ -91,4 +91,122 @@
 .backBtn:hover {
 	cursor: pointer;
 	color: #1da1f2;
+}
+
+.overlay {
+	position: absolute;
+	width: 70%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	opacity: 0;
+	pointer-events: none;
+	transition: opacity 0.6s ease-in-out;
+	z-index: 10;
+}
+
+.overlay:hover {
+	cursor: pointer;
+}
+
+.overlay.visible {
+	opacity: 1;
+	pointer-events: all;
+}
+
+@keyframes expand {
+	0% {
+		height: 0%;
+	}
+	100% {
+		height: 100%;
+	}
+}
+
+.overlayContent {
+	display: flex;
+	flex-direction: column;
+	border: 1px solid #252525;
+	animation: expand 0.3s forwards;
+	background-color: black;
+	width: 100%;
+	border-radius: 8px;
+	padding: 1.25rem 2rem;
+}
+
+.fieldWrapper {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+	margin-top: auto;
+	width: 100%;
+}
+
+.labelWrapper {
+	border-bottom: 1px solid #252525;
+	width: 20%;
+	padding-bottom: 0.5rem;
+}
+
+.label {
+	height: 40px;
+	padding-right: 1rem;
+	transition: all 0.35s ease-in-out;
+}
+
+.inputFields {
+	height: 40px;
+	width: 100%;
+	padding: 0.75rem 1rem;
+	border: 2px solid #363636;
+	transition: all 0.35s ease-in-out;
+}
+
+#priceField::-webkit-inner-spin-button,
+#priceField::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+.fieldLabels {
+	padding-left: 0.2rem;
+	padding-bottom: 0.25rem;
+	font-size: 1.5ch;
+}
+
+.priceWrapper,
+.durationWrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 0.25rem;
+	width: 35%;
+}
+
+.inputFields:active,
+.inputFields:focus,
+.textarea:active,
+.textarea:focus {
+	outline: none;
+	border: 2px solid #1da1f2;
+	z-index: 1;
+}
+
+.btn {
+	width: 130px;
+	padding: 0.75rem 1rem;
+	border-radius: 22px;
+	margin-left: auto;
+	border: none;
+	background-color: #1da1f2;
+	transition: all 0.35s ease-in-out;
+	letter-spacing: 0.1rem;
+	margin-top: auto;
+}
+
+.btn:hover {
+	cursor: pointer;
+	background-color: #0e81bd;
 }
