--- a/src/styles/Auction.module.css
+++ b/src/styles/Auction.module.css
@@ -54,6 +54,8 @@
 	justify-content: center;
 	align-items: center;
 	padding: 1rem;
+	position: relative;
+	min-width: 900px;
 }
 
 .iframe {
@@ -95,7 +97,8 @@
 
 .overlay {
 	position: absolute;
-	width: 70%;
+	width: 73%;
+	min-width: 500px;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
 	display: flex;
@@ -133,6 +136,7 @@
 	animation: expand 0.3s forwards;
 	background-color: black;
 	width: 100%;
+	min-width: 500px;
 	border-radius: 8px;
 	padding: 1.25rem 2rem;
 }
@@ -142,7 +146,6 @@
 	align-items: center;
 	gap: 1rem;
 	margin-top: auto;
-	width: 100%;
 }
 
 .labelWrapper {
@@ -209,4 +212,32 @@
 .btn:hover {
 	cursor: pointer;
 	background-color: #0e81bd;
+}
+
+.auctionCountdownOverlay {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 30px;
+	width: 70%;
+	height: 70%;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: white;
+	font-size: 24px;
+	font-weight: bold;
+	z-index: 2;
+	min-width: 500px;
+}
+
+.endAuctionBtn {
+	background-color: #1e88e5;
+	color: white;
+	font-size: 18px;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	margin-top: 10px;
 }
