--- a/src/styles/Auction.module.css
+++ b/src/styles/Auction.module.css
@@ -232,7 +232,6 @@
 }
 
 .endAuctionBtn {
-	background-color: rgb(135, 0, 0);
 	color: white;
 	font-size: 18px;
 	padding: 0.5rem 0.5rem;
@@ -241,6 +240,11 @@
 	cursor: pointer;
 	margin-top: 10px;
 	width: 140px;
+	transition: all 0.3s ease-in-out;
+}
+
+.endAuctionBtn:hover {
+	background-color: rgb(105, 0, 0);
 }
 
 .highestBid {
