fix icon display bug

--- a/src/styles/Tweet.module.css
+++ b/src/styles/Tweet.module.css
@@ -96,30 +96,16 @@
 	color: #999999;
 }
 
-#like,
-#comment,
-#tip {
-	transition: all 0.35s ease-in-out;
-	border-radius: 32px;
-	padding: 0.5rem;
-}
-
 #comment:hover {
 	color: #1da1f2;
-	transform: scale(1.05);
-	background-color: rgb(153, 153, 153, 0.2);
 }
 
 #like:hover {
 	color: red;
-	transform: scale(1.05);
-	background-color: rgb(153, 153, 153, 0.2);
 }
 
 #tip:hover {
 	color: rgb(0, 148, 0);
-	transform: scale(1.1);
-	background-color: rgb(153, 153, 153, 0.2);
 }
 
 .profilePic {
@@ -143,4 +129,17 @@
 	justify-content: center;
 	align-items: center;
 	padding: 2rem;
+}
+
+.iconWrapper {
+	display: flex;
+	align-items: center;
+	transition: all 0.35s ease-in-out;
+	border-radius: 32px;
+	padding: 0.5rem;
+}
+
+.iconWrapper:hover {
+	transform: scale(1.1);
+	background-color: rgb(153, 153, 153, 0.2);
 }
