--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -2,9 +2,8 @@
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	gap: 2.25rem;
-	padding: 2rem 2rem 2rem 4rem;
+	gap: 1.25rem;
+	padding: 2rem 0 0 3rem;
 	border-right: 1px solid #252525;
 }
 
@@ -14,11 +13,29 @@
 	border-radius: 32px;
 }
 
-.sidebar > *:hover:nth-child(1) {
+.iconWrapper:nth-child(1) {
 	color: #1da1f2;
 }
 
 .sidebar > *:hover {
 	cursor: pointer;
 	background-color: rgb(153, 153, 153, 0.2);
+}
+
+.iconWrapper {
+	display: flex;
+	align-items: center;
+	gap: 1.5rem;
+	margin-right: auto;
+	width: 100%;
+	padding: 1rem 1.5rem;
+}
+
+.iconWrapper:nth-of-type(1) {
+}
+
+.linkText {
+	font-family: Helvetica, Arial, sans-serif;
+	letter-spacing: 0.1rem;
+	margin-top: auto;
 }
