--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -9,15 +9,27 @@
 
 .sidebar > * {
 	transition: 0.35s all ease;
-	padding: 0.5rem;
 	border-radius: 32px;
 }
 
-.iconWrapper:nth-child(1) {
+#twitterIcon {
 	color: #1da1f2;
+	transition: all 0.35s ease-in-out;
 }
 
-.sidebar > *:hover {
+#twitterIcon:hover {
+	background-color: inherit;
+}
+
+#twitterIcon > * {
+	transition: all 0.45s ease-in-out;
+}
+
+#twitterIcon:hover > * {
+	transform: scale(1.3);
+}
+
+.iconWrapper:hover {
 	cursor: pointer;
 	background-color: rgb(153, 153, 153, 0.2);
 }
@@ -27,11 +39,8 @@
 	align-items: center;
 	gap: 1.5rem;
 	margin-right: auto;
-	width: 100%;
+	width: 90%;
 	padding: 1rem 1.5rem;
-}
-
-.iconWrapper:nth-of-type(1) {
 }
 
 .linkText {
