--- a/src/styles/TokenHub.module.css
+++ b/src/styles/TokenHub.module.css
@@ -36,7 +36,7 @@
 }
 
 .hubContainers {
-	height: 250px;
+	height: 170px;
 	border: 1px solid #252525;
 	padding: 1rem;
 	margin: 0.5rem;
@@ -58,12 +58,12 @@
 
 .table {
 	letter-spacing: 0.05rem;
+	width: 100%;
 }
 
 .headerCells {
-	width: 60px;
 	margin-top: 0.5rem;
-	text-align: center;
+	padding-left: 2rem;
 }
 
 .tableRow {
@@ -72,6 +72,7 @@
 	gap: 2rem;
 	border-bottom: 1px solid #252525;
 	padding-bottom: 0.5rem;
+	width: 100%;
 }
 
 .formWrapper {
