--- a/src/styles/Tweet.module.css
+++ b/src/styles/Tweet.module.css
@@ -15,6 +15,24 @@
 	z-index: 2;
 }
 
+.tweet.commentDialogOpen {
+	display: grid;
+	grid-template-columns: 50px 1fr;
+	grid-auto-flow: row;
+	grid-auto-rows: min-content;
+	gap: 0.5rem;
+	padding: 2rem 2rem 0.75rem 1rem;
+	border: 1px solid #252525;
+	font-family: Helvetica;
+	line-height: 1.25rem;
+	letter-spacing: 0.02rem;
+	max-width: 710px;
+	position: relative;
+	overflow: hidden;
+	z-index: 2;
+	pointer-events: none;
+}
+
 .loading {
 	padding: 2rem 2rem 0.75rem 1rem;
 	border: 1px solid #252525;
