fix overlay bug

--- a/src/styles/Tweet.module.css
+++ b/src/styles/Tweet.module.css
@@ -141,6 +141,10 @@
 	/* pointer-events: none; */
 }
 
+.dialogOpenOverlay {
+	display: flex;
+}
+
 .loading {
 	display: flex;
 	justify-content: center;
